--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico" />
 </head>
 
@@ -46,8 +47,8 @@
                 <h1>Hello, <span></span></h1>
                 <h1>My name is <span></span></h1>
                 <h1 id="last-h1">Denisa Roșu <span></span></h1>
-                <p>I am glad that you're here</p>
-                <p>Disclosure:<br>!(On the right side it's me)<br> </p>
+                <p>I am glad that you are here</p>
+                <p>Disclosure:<br>On the right side is not me<br></p>
                 <a href="#projects" type="button" class="hire-me-button">Portofolio</a>
             </div>
         </div>
@@ -63,22 +64,28 @@
             </div>
             <div id="wrapper-div">
                 <div id="about-p-resume">
-                    <p class="anim-from-up" data-delay=".5s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My
-                        intention is not to take your precious time so it will be a short description.
-                        As I said in the introduction, I am Denisa Roșu or NISA (the logo that you probably noticed
+                    <p class="anim-from-up" data-delay=".5s">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My name
+                        is
+                        Denisa Roșu, although you can call
+                        me NISA (the
+                        logo that you
+                        probably noticed
                         it).
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At the moment I am studying for a master's degree in
                         Software Engineering at Technical
                         University
-                        of Cluj-Napoca. I graduated this summer (2020) from the Faculty of Automation and Computer
-                        Science at Politehnica University of Timișoara.<br>
+                        of Cluj-Napoca. I graduated in the summer of 2020
+                        from the Faculty of Automation and Computer
+                        Science at Politehnica University of Timișoara and I am excited to put into practice the
+                        knowledge and skills acquired so far.<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a Junior Software Developer who is passionate about Web
-                        and Mobile Development, but I would like to start my career in Web Development Industry.
-                        That is why I am interested in a Web Developer position, but I remain open to new challenges as
-                        long as they
-                        help me grow in every
-                        direction. If you want to find out more about me, feel free to download my
-                        resume.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am looking
+                        and Mobile Development, yet I am interested in a Front-end Developer position.
+                        However, I am open to new challenges as long they help me expand my knowledge and allow me to
+                        develop myself professionally.
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you want to
+                        find out more about me, feel free to download my
+                        resume. I am looking
                         forward
                         to meet
                         you!
@@ -114,12 +121,14 @@
                             blood donation. The application is dedicated to blood transfusion centres and requires
                             specific
                             credentials. Therefore, you need permission to sign in.</p>
-                        <a target="_blank" href="https://github.com/Denisa-dev/blood-management-web-app.git"
-                            id="source-code-a">Source
-                            code</a>
-                        <a target="_blank"
-                            href="https://firebasestorage.googleapis.com/v0/b/allinone-project-9cbfc.appspot.com/o/web-app.mp4?alt=media&token=2f06eb22-c79d-42cb-b3f7-95046856077a"
-                            id="source-code-a">Demonstration</a>
+                        <div class="demo-video">
+                            <a target="_blank" href="https://github.com/Denisa-dev/blood-management-web-app.git"
+                                id="source-code-a">Source code</a>
+                            <a target="_blank"
+                                href="https://firebasestorage.googleapis.com/v0/b/allinone-project-9cbfc.appspot.com/o/web-app.mp4?alt=media&token=2f06eb22-c79d-42cb-b3f7-95046856077a"
+                                id="source-code-a">Demo video</a>
+                        </div>
+
                     </div>
                     <div class="project-image">
                         <img src="images/web-auth.jpg" alt="Web Blood Donation Application">
@@ -131,12 +140,13 @@
                         <h3><span>02.</span> Blood Donor Mobile Application </h3>
                         <p>The mobile application is also a part of my diploma project and is dedicated to everyone who
                             wants to donate blood or to help patients in order to receive blood. </p>
-                        <a target="_blank" href="https://github.com/Denisa-dev/blood-donor-mobile-application.git"
-                            id="source-code-a">Source
-                            code</a>
-                        <a target="_blank"
-                            href="https://firebasestorage.googleapis.com/v0/b/allinone-project-9cbfc.appspot.com/o/mobile-app.mp4?alt=media&token=616bd771-2e0b-4b0d-b203-7ac6c19c21db"
-                            id="source-code-a">Demonstration</a>
+                        <div class="demo-video">
+                            <a target="_blank" href="https://github.com/Denisa-dev/blood-donor-mobile-application.git"
+                                id="source-code-a">Source code</a>
+                            <a target="_blank"
+                                href="https://firebasestorage.googleapis.com/v0/b/allinone-project-9cbfc.appspot.com/o/mobile-app.mp4?alt=media&token=616bd771-2e0b-4b0d-b203-7ac6c19c21db"
+                                id="source-code-a">Demo video</a>
+                        </div>
                     </div>
                     <div class="project-image">
                         <img src="images/mobile.jpg" alt="Blood Donation Mobile Application">
@@ -148,9 +158,11 @@
                         <h3><span>03.</span> Personal Online Portofolio</h3>
                         <p>This project helped me a lot to improve my Web Development skills and I consider it a great
                             start in my journey of becoming a professional Software Engineer.</p>
-                        <a target="_blank" href="https://github.com/Denisa-dev/personal-portofolio.git"
-                            id="source-code-a">Source
-                            code</a>
+                        <div class="demo-video">
+                            <a target="_blank" href="https://github.com/Denisa-dev/personal-portofolio.git"
+                                id="source-code-a">Source
+                                code</a>
+                        </div>
                     </div>
                     <div class="project-image">
                         <img src="images/current-app.jpg" alt="My Online Portofolio">
@@ -191,7 +203,7 @@
             <div class="contact-top">
                 <h1 class="section-title anim-from-up" data-delay="0s">Con<span class="span-title">t</span>act</h1>
                 <div class="anim-from-up" data-delay=".2s">
-                    <a href="tel:+40749309314" target="_blank">Do you want to have a talk?</a>
+                    <a href="mailto:denisarosu33@gmail.com">Call to Action</a>
                 </div>
                 <div class="contact-bottom">
                     <div class="anim-from-up" data-delay=".3s">
@@ -202,7 +214,7 @@
                         <a href="https://github.com/Denisa-dev" target="_blank" class="fa fa-github"></a>
                     </div>
                     <div class="anim-from-up" data-delay=".6s">
-                        <a href="mailto:denisarosu33@gmail.com" class="fa fa-envelope"></a>
+                        <a href="https://join.skype.com/invite/iXnNu9Kupt3L" target="_blank" class="fa fa-skype"></a>
                     </div>
                 </div>
             </div>
