Margin home adjusted

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="project-top">
                 <h1 class="section-title anim-from-up" data-delay="0s">Pro<span class="span-title">j</span>ects</h1>
                 <p class="anim-from-up" data-delay=".2s">Here are a few projects of mine. You can access the
-                    source code of all of them linked to <a href="https://github.com/" target="_blank">Github</a>. For
+                    source code of all of them linked to <a href="https://github.com/" target="_blank">GitHub</a>. For
                     any question, don't hesitate to contact me.</p>
             </div>
             <div class="project-bottom">
