About-projects-mediaQ adjustments

--- a/index.html
+++ b/index.html
@@ -64,31 +64,24 @@
             </div>
             <div id="wrapper-div">
                 <div id="about-p-resume">
-                    <p class="anim-from-up" data-delay=".5s">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My name
-                        is
-                        Denisa Roșu, although you can call
-                        me NISA (the
-                        logo that you
-                        probably noticed
-                        it).
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At the moment I am studying for a master's degree in
-                        Software Engineering at Technical
-                        University
-                        of Cluj-Napoca. I graduated in the summer of 2020
-                        from the Faculty of Automation and Computer
-                        Science at Politehnica University of Timișoara and I am excited to put into practice the
-                        knowledge and skills acquired so far.<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a Junior Software Developer who is passionate about Web
-                        and Mobile Development, yet I am interested in a Front-end Developer position.
-                        However, I am open to new challenges as long they help me expand my knowledge and allow me to
-                        develop myself professionally.
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you want to
-                        find out more about me, feel free to download my
-                        resume. I am looking
-                        forward
-                        to meet
-                        you!
+                    <p class="anim-from-up" data-delay=".5s">My name is Denisa Roșu, although
+                        you can call me NISA (the logo that you probably noticed it).
+                        <br><span>At the moment I am studying for a master's degree in
+                            Software Engineering at Technical
+                            University of Cluj-Napoca. I graduated in the summer of 2020
+                            from the Faculty of Automation and Computer
+                            Science at Politehnica University of Timișoara and I am excited to put into practice the
+                            knowledge and skills acquired so far.</span><br>
+                        <span>I am a Junior Software Developer who is passionate about Web
+                            and Mobile Development, yet I am interested in a Front-end Developer position.
+                            However, I am open to new challenges as long they help me expand my knowledge and allow me
+                            to
+                            develop myself professionally.</span>
+                        <br><span>If you want to find out more about me, feel free to download my
+                            resume. I am looking
+                            forward
+                            to meet
+                            you!</span>
                     </p>
                     <a type="button" href="pdfs/WEB_Denisa_ROSU_CV.pdf" target="_blank" class="resume anim-from-up"
                         data-delay=".2s">View
