--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1 id="last-h1">Denisa Roșu <span></span></h1>
                 <p>I am glad that you are here</p>
                 <p>Disclosure:<br>On the right side is not me<br></p>
-                <a href="#projects" type="button" class="hire-me-button">Portofolio</a>
+                <a href="#projects" type="button" class="hire-me-button">Portfolio</a>
             </div>
         </div>
         <div class="break-section-top"></div>
